--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,3 @@
 PORT = 8080
-MONGO_URI = mongodb+srv://r4everstore:l1uU79MCtBMXTyLZ@r4everstore.qi0wy.mongodb.net/
+MONGO_URI = mongodb://localhost:27017/
 JWT_SECRET = privatejwttoken
